# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.691 2008-07-01 08:01:15 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.0 beta4 (2008/07/??)
 - (2008/07/01) Updated CPAN module Net::POP3::SSLWrapper to version 0.02.
 - (2008/07/01) Updated CPAN module XML::Parser::Lite to version 0.710.05.
 - (2008/07/01) Updated CPAN module Authen::SASL to version 2.11.
 - (2008/07/01) Updated CPAN module MIME::Tools to version 5.427.
 - (2008/07/01) Updated CPAN module File::Temp to version 0.20.
 - (2008/06/30) Implemented options to search update-, response- and solution
    escalation time in TicketSearch().
 - (2008/06/27) Fixed bug# 2960 - DBUpdate-to-2.3.pl script fails.
 - (2008/06/26) Fixed bug# 3036 - Missing link delete checkboxes.
 - (2008/06/26) Fixed bug# 3029 - Search result of linkable objects is not
    sorted correctly.
 - (2008/06/26) Fixed bug# 3035 - Missing check to prevent creation of the same
    link with opposite direction.
 - (2008/06/26) Fixed bug# 3030 - Getting no error message if I link an already
    linked ticket again.
 - (2008/06/26) Fixed bug# 3034 - Ticket::Frontend::ZoomExpandSort is
    conflicting with new ticket Expand/Collapse feature in AgentTicketZoom, it
    get lost after clicking on Collapse.
 - (2008/06/26) Moved required permissions for ticket owner-selections to
    owner and for ticket responsible-selection to responsible (instead rw
    permissions).
 - (2008/06/23) Fixed bug# 3020 - New complex link table blocks output of the
    free text fields.
 - (2008/06/23) Fixed bug# 3019 - Wrong location of the new complex link table.

2.3.0 beta3 (2008/06/24)
 - (2008/06/23) Fixed bug# 3015 - Performace problem in AgentLinkObject.